	  tools (2013-4-17).
	* sched/task_exithook.c:  Don't flush the streams until the
	  final thread of the group exits.  Flushing may cause the
	  thread to get suspended at a bad time and other threads in the
	  group may run while the exiting thread is in an unhealthy state.
	  This can cause crashes under certain circumstance.  This is a
	  critical bugfix (2013-4-18).
	* drivers/mtd/ramtron.c:  Extended to support the FM25V01 device.
	  Contributed by Lorenz Meier (2013-4-18).
	* sched/task_deletecurrent.c and task_exit.c, arch/*/up_exit.c:
	  Renamed task_deletecurrent() and task_exit() since it really
	  handles the architecture independent part of _exit().  _exit()
	  is used internally, but if it is called from the user, it should
	  unregister any atexit() or on_exit() functions (2013-4-18).
	* tools/kconfig2html.c: This is the beginning of a tool to
	  replace the hand-generated documentation of the NuttX configruation
	  variables with auto-generated documentation.  The initial checkin
	  is an incomplete, poorly structured prototype that I hope to
	  evolve into a useful tool (2014-4-20).
	* libc/string/lib_strchr.c:  strchr(str, '\0') should return a
	  pointer to the end of the string, not NULL.  From Petteri
	  Aimonen (2014-4-22).
	* fs/fat/fs_writefat.c: mkfatfs was writing the boot code to the
	  wrong location.  From Petteri Aimonen (2014-4-22).
	* Documentation:  The NuttX documentation now expects to find an
	  auto-generated version of the configuration variable documentation
	  at Documentation/NuttXConfigVariables.html (2014-4-22).
	* arch/arm/src/lpc17xx/lpc17_adc.c:  Only one ADC pin was configured.
	  Need to configure all that are in the ADC0 set.  From MKannan
          (2014-4-23).
	* configs/zkit-arm-1769/src:  ADC and SPI/USB MSC updates from
	  MKannan (2014-4-23).
	* arm/src/armv7-m/ram_vectors.h and arm/src/armv7-m/up_ramvec_initialize.c:
	  Fixes to RAM vector logic from Paul Y. Zhang (2014-4-23)